afterschool gap added

--- a/src/app/Afterschool/Afterschool.scss
+++ b/src/app/Afterschool/Afterschool.scss
@@ -38,7 +38,7 @@ h1 {
 .courses-section {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  // gap: 20px;
+  gap: 30px;
   margin: 0; // Remove any extra margin from the grid container
   padding: 0;
 }
