--- a/src/app/Afterschool/Afterschool.scss
+++ b/src/app/Afterschool/Afterschool.scss
@@ -9,6 +9,7 @@
   box-sizing: border-box;
   margin: 0;
 }
+
 h1 {
   font-size: 30px;
   color: #f9f6f6;
@@ -38,8 +39,8 @@ h1 {
 .courses-section {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 30px;
-  margin: 0; // Remove any extra margin from the grid container
+  gap: 10px 20px;
+  margin: 0;
   padding: 0;
 }
 
@@ -49,7 +50,7 @@ h1 {
   border-radius: 10px;
   overflow: hidden;
   transition: transform 0.3s ease;
-  height: 90%; // Set a full height for all cards
+  height: 90%;
   padding: 0;
   margin: 0;
 
@@ -61,30 +62,41 @@ h1 {
 .course-image-container {
   position: relative;
   width: 100%;
-  height: 200px; // Set a fixed height for the image container
+  height: 200px;
   margin: 0;
   padding: 0;
 }
 
 .course-image {
-  object-fit: cover; // Ensure the image covers the container fully
+  object-fit: cover;
 }
 
-.in-progress-button {
+.status-button {
   position: absolute;
   font-size: 13px;
   top: 80px;
-  right:15px;
+  right: 15px;
   padding: 4px 6px;
-  background-color: #006653;
   color: rgb(255, 255, 255);
   border: 1px solid rgb(68, 68, 68);
   border-radius: 25px;
   cursor: pointer;
   font-size: 15px;
 
+  &.Not Started {
+    background-color: red;
+  }
+
+  &.In Progress {
+    background-color: yellow;
+    color: black; // Optional, for better contrast with yellow background
+  }
+
+  &.Completed {
+    background-color: green;
+  }
+
   &:hover {
-    background-color: #013b28;
-    color: white;
+    opacity: 0.8;
   }
 }
