--- a/src/app/Afterschool/Afterschool.scss
+++ b/src/app/Afterschool/Afterschool.scss
@@ -39,14 +39,14 @@ h1 {
 .courses-section {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 10px 20px;
+  gap: 0px 20px;
   margin: 0;
   padding: 0;
 }
 
 .course-card {
   position: relative;
-  background-color: transparent;
+  // background-color: transparent;
   border-radius: 10px;
   overflow: hidden;
   transition: transform 0.3s ease;
@@ -60,6 +60,8 @@ h1 {
 }
 
 .course-image-container {
+  // background-color: transparent;p
+
   position: relative;
   width: 100%;
   height: 200px;
@@ -77,17 +79,17 @@ h1 {
   top: 80px;
   right: 15px;
   padding: 4px 6px;
-  color: rgb(255, 255, 255);
   border: 1px solid rgb(68, 68, 68);
   border-radius: 25px;
   cursor: pointer;
   font-size: 15px;
 
-  &.Not Started {
+  &.Not-Started {
     background-color: red;
+    // color: black;
   }
 
-  &.In Progress {
+  &.In-Progress {
     background-color: yellow;
     color: black; // Optional, for better contrast with yellow background
   }
@@ -100,3 +102,4 @@ h1 {
     opacity: 0.8;
   }
 }
+
