--- a/src/app/Afterschool/Afterschool.scss
+++ b/src/app/Afterschool/Afterschool.scss
@@ -5,7 +5,7 @@
   background-position: center;
   width: 100%;
   height: 100%;
-  padding: 20px;
+  padding: 10px;
   box-sizing: border-box;
   margin: 0;
 }
@@ -18,7 +18,7 @@ h1 {
 
 .account-header {
   text-align: center;
-  padding: 20px;
+  padding: 10px;
   font-size: 30px;
   font-weight: bold;
   background: linear-gradient(180deg, #FF0075, #8C52FF);
@@ -39,18 +39,17 @@ h1 {
 .courses-section {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 0px 20px;
+  grid-column-gap: 15px; /* Horizontal gap */
+  grid-row-gap: 0px; /* Vertical gap */
   margin: 0;
   padding: 0;
 }
 
 .course-card {
   position: relative;
-  // background-color: transparent;
   border-radius: 10px;
   overflow: hidden;
   transition: transform 0.3s ease;
-  height: 90%;
   padding: 0;
   margin: 0;
 
@@ -60,7 +59,6 @@ h1 {
 }
 
 .course-image-container {
-
   position: relative;
   width: 100%;
   height: 200px;
@@ -70,22 +68,36 @@ h1 {
   object-fit: cover;
 }
 
-.status-container {
+.image-overlay {
   position: absolute;
-  top: 65px;
-  right: 5px;
+  bottom: 0;
+  left: 20px;
+  width: 100%;
+  height: 70%; /* Cover the bottom half of the card */
   display: flex;
-  flex-direction: column; // Stack buttons vertically
-  gap: 10px; // Space between the buttons
+  justify-content: center;
+  align-items: center;
+}
+
+.status-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
 }
 
 .status-button, .completion-button {
   font-size: 13px;
-  padding: 1px 4px;
+  padding: 10px 20px;
   border: 1px solid rgb(68, 68, 68);
   border-radius: 25px;
   cursor: pointer;
   font-size: 15px;
+  position: relative;
+  transform: translateY(50%); /* Move the button 50% down, making half of it visible */
 }
 
 .status-button {
@@ -95,7 +107,7 @@ h1 {
 
   &.In-Progress {
     background-color: yellow;
-    color: black; // Optional, for better contrast with yellow background
+    color: black; /* Optional, for better contrast with yellow background */
   }
 
   &.Completed {
@@ -103,7 +115,7 @@ h1 {
   }
   
   &:hover {
-    opacity: 0.8;
+    opacity: 0.2;
   }
 }
 
@@ -115,5 +127,3 @@ h1 {
     opacity: 0.8;
   }
 }
-
-
