puzzle arena ui changes

--- a/src/app/arena/puzzleArena/puzzleArena.scss
+++ b/src/app/arena/puzzleArena/puzzleArena.scss
@@ -58,7 +58,7 @@
     }
 
     &.active {
-      background: #4fc3f7; // Even darker blue for active
+      background: #fffec0; // Even darker blue for active
       border-color: #0288d1;
     }
 
