--- a/src/app/side.scss
+++ b/src/app/side.scss
@@ -31,10 +31,10 @@
     }
     
     .role {
-      font-family: "Matemasie", sans-serif;
-      -webkit-text-stroke: 1px rgb(5, 5, 5);
+      font-family: 'Montserrat', sans-serif;
       font-size: 2rem;
-      color: #2196f3; // Cool blue for variety
+      font-weight: bold;
+      color: #0075d4; // Cool blue for variety
       // background-color: #ffffff;
       padding: 10px 20px;
       border-radius: 30px;
