--- a/src/app/modules/level1/theChessboard/1.scss
+++ b/src/app/modules/level1/theChessboard/1.scss
@@ -18,6 +18,7 @@ body {
     margin-bottom: 10px;
 
     p {
+      font-family: 'Montserrat', sans-serif;
       font-size: 1.5rem; 
       margin-bottom: 30px;
       margin-top: 10px;
@@ -110,6 +111,7 @@ margin-bottom: 20px; // Space below the category boxes
     margin-bottom: 10px;
 
     p {
+      font-family: 'Montserrat', sans-serif;
       margin: 0;
       color: white;
     }
