--- a/src/app/Afterschool2/Afterschool2.scss
+++ b/src/app/Afterschool2/Afterschool2.scss
@@ -4,7 +4,7 @@
   background-size: cover;
   background-position: center;
   width: 100%;
-  height: 100%;
+  height: 100vh; // increased height
   padding: 10px;
   box-sizing: border-box;
   margin: 0;
@@ -49,8 +49,8 @@ h1 {
 
 .course-image-container {
   position: relative;
-  width: 100%;
-  height: 200px;
+  width: 95%;
+  height: 150px;
 }
 
 .course-image {
