--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,50 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.layout-container {
+  display: flex;
+}
+
+.menu-button {
+  display: none;
+  position: absolute;
+  top: 23px;
+  left: 5px;
+  z-index: 1000;
+  background-color: #ffffff;
+  color: #4b4b4b;
+  border: none;
+  padding: 0.2rem;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .menu-button {
+    display: block;
+  }
+
+  .sidebar {
+    transform: translateX(-100%);
+    transition: transform 0.3s ease;
+  }
+
+  .sidebar.open {
+    transform: translateX(0);
+  }
+}
+
+@media (min-width: 769px) {
+  .menu-button {
+    display: none;
+  }
+
+  .sidebar {
+    transform: none;
+  }
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
