mobile view added

--- a/src/app/si.scss
+++ b/src/app/si.scss
@@ -36,4 +36,8 @@
       transform: none;
     }
   }
+.sidebar {
+    width: 350px; /* Adjust the width as needed */
+    background-color: rgb(235, 231, 231); /* Adjust the background color as needed */
+}
   
