pawn course added

--- a/src/app/si.scss
+++ b/src/app/si.scss
@@ -4,7 +4,7 @@
     top: 23px;
     left: 5px;
     z-index: 1000;
-    background-color: #ffffff;
+    // background-color: #ffffff;
     color: #4b4b4b;
     border: none;
     padding: 0.2rem;
