--- a/src/app/Afterschool2/Afterschool2.scss
+++ b/src/app/Afterschool2/Afterschool2.scss
@@ -82,7 +82,7 @@ h1 {
 
 .status-button, .completion-button {
   font-size: 13px;
-  padding: 10px 20px;
+  padding: 10px 15px;
   border: 1px solid rgb(68, 68, 68);
   border-radius: 25px;
   cursor: pointer;
@@ -93,6 +93,7 @@ h1 {
 
 .status-button {
   &.Not-Started {
+    color: white;
     background-color: rgb(224, 64, 43);
   }
 
