--- a/src/app/side2.scss
+++ b/src/app/side2.scss
@@ -168,7 +168,13 @@
       background-color: #f0f0f0;
       transform: translateX(8px);
     }
-
+    &.highlighted {
+      background-color: rgb(243, 146, 10); /* Or any color you want */
+  }
+  &.active {
+    background-color: #3cc91d; // Change to desired highlight color
+    font-weight: bold; // Optional: change font weight for emphasis
+  }
     .icon {
       width: 18px;
       height: 18px;
@@ -233,7 +239,7 @@
         color: #ffffff;
         border: none;
         border-radius: 8px;
-        // padding: 12px 24px;
+        padding: 12px 24px;
         cursor: pointer;
         font-size: 16px;
         font-weight: 500;
