--- a/src/app/portalhome/portal.scss
+++ b/src/app/portalhome/portal.scss
@@ -309,6 +309,16 @@
     z-index: 1;
     transform: translateY(-100%);
   }
+  .chess-icon {
+    width: 130px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 50%;
+    padding: 10px;
+    // transform: translateY(10%);
+  }
+  
+  
 }
 
 
