--- a/src/app/arena/startArena/startArena.scss
+++ b/src/app/arena/startArena/startArena.scss
@@ -65,6 +65,10 @@
         background-color: #003366;
         color: white;
       }
+      tr {
+        background-color: white;
+        color: black;
+      }
     }
   }
   
