--- a/src/app/portalhome/portal.scss
+++ b/src/app/portalhome/portal.scss
@@ -13,7 +13,7 @@
     h2 {
       text-align: center;
       margin: 0;
-      font-size: 68px; /* Larger font size */
+      font-size: 40px; /* Larger font size */
       font-weight: bold; /* Bold text */
       font-family: 'Montserrat', sans-serif;
       background: linear-gradient(90deg, #fdfdfd, #ffffff, #fcfcfc); /* Gradient background */
@@ -61,6 +61,7 @@
         color: #ffffff;
         font-size: 28px;
         text-align: center;
+        font-weight: bold;
         margin-bottom: 20px;
       }
   
@@ -74,28 +75,24 @@
         display: flex;
         align-items: center;
         background-color: #a8dadc;
-        padding: 10px;
+        // padding: 5px;
         box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow */
   
         .icon {
           flex-shrink: 0;
           width: 100px;
           height: 200px;
-          margin-right: 5px;
-          img {
-            width: 100%; /* Make image fit the icon box */
-            border-radius: 50%; /* Round icon images */
-          }
         }
   
         h4 {
           margin: 0;
           font-size: 20px;
+          font-weight: bold;
           color: #1d3557;
         }
   
         p {
-          margin: 5px 0 0 0;
+          margin: 1px 0 0 0;
           font-size: 16px;
           color: #457b9d;
         }
@@ -111,7 +108,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  margin-top: 10px;
+  // margin-top: 10px;
   color:black;
   
 
