--- a/src/app/arena/startArena/startArena.scss
+++ b/src/app/arena/startArena/startArena.scss
@@ -4,12 +4,8 @@
   background-color: #15dd6f;
 }
 
-.title {
-  font-size: 24px;
-  text-align: center;
-  color: #c74316;
-  margin-bottom: 20px;
-  font-weight: bold;
+.titlemain{
+ 
 }
 
 .imageGallery {
@@ -72,8 +68,10 @@
     }
   }
   
-  .title {
-    margin-top: 20px;
+  .titlemain { 
+    text-align: center; 
+    margin-bottom: 20px;
+    font-weight: bold; 
     font-size: 24px;
     color: #333;
   }
