--- a/src/app/si.scss
+++ b/src/app/si.scss
@@ -1,42 +1,49 @@
 .menu-button {
-    display: none;
-    position: absolute;
-    top: 23px;
-    left: 5px;
-    z-index: 1000;
-    // background-color: #ffffff;
-    color: #4b4b4b;
-    border: none;
-    padding: 0.2rem;
-    font-size: 1.5rem;
-    cursor: pointer;
-  }
-  @media (max-width: 2000px) {
-    .menu-button {
-      display: block;
-    }
-  
-    .sidebar {
-      transform: translateX(-100%);
-      transition: transform 0.3s ease;
-    }
-  
-    .sidebar.open {
-      transform: translateX(0);
-    }
-  }
-  
-  @media (min-width: 2001px) {
-    .menu-button {
-      display: none;
-    }
-  
-    .sidebar {
-      transform: none;
-    }
-  }
-.sidebar {
-    width: 350px; /* Adjust the width as needed */
-    background-color: rgb(235, 231, 231); /* Adjust the background color as needed */
+  display: none;
+  position: absolute;
+  top: 23px;
+  left: 5px;
+  z-index: 1000;
+  color: #4b4b4b;
+  border: none;
+  padding: 0.2rem;
+  font-size: 1.5rem;
+  cursor: pointer;
 }
-  
+
+@media (max-width: 2000px) {
+  .menu-button {
+    display: block; // Show the menu button on smaller screens
+  }
+
+  .sidebar {
+    width: 350px; // Ensure the sidebar has the same width as defined for larger screens
+    transform: translateX(-100%); // Hide the sidebar by moving it off-screen
+    transition: transform 0.3s ease; // Smooth slide animation
+  }
+
+  .sidebar.open {
+    transform: translateX(0); // Slide the sidebar back into view when open
+  }
+}
+
+@media (min-width: 2001px) {
+  .menu-button {
+    display: none; // Hide the menu button on larger screens
+  }
+
+  .sidebar {
+      transform: none;
+  }
+
+  .content-container {
+    margin-left: 350px; // Adjust the content container to account for the sidebar's width
+    padding: 1rem;
+  }
+}
+
+
+.sidebar {
+  width: 350px; /* Adjust the width as needed */
+  background-color: rgb(235, 231, 231); /* Adjust the background color as needed */
+}
