--- a/src/app/side2.scss
+++ b/src/app/side2.scss
@@ -254,6 +254,25 @@
       }
     }
   }
-  
-  
+}
+.sidebar {
+  width: 250px;
+  transition: width 0.3s ease;
+
+  &.minimized {
+    width: 60px;
+    // Additional styling for minimized sidebar
+  }
+
+  &.expanded {
+    width: 250px;
+    // Additional styling for expanded sidebar
+  }
+}
+
+// Media query for mobile view
+@media only screen and (max-width: 768px) {
+  .sidebar {
+    width: 260px; // Minimized sidebar for mobile view
+  }
 }
